# kids_story_trainer

./: Cargo.toml  README.md  Trunk.toml  index.html
src/: main.rs
